[gd_scene load_steps=17 format=3 uid="uid://cd4oqobplctl7"]

[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="1_5xhof"]
[ext_resource type="Script" path="res://Scripts/LevelEditor.gd" id="2_i0cbh"]
[ext_resource type="Script" path="res://Scripts/Grid.gd" id="4_ftw4p"]
[ext_resource type="Theme" uid="uid://dmpt84s311hf8" path="res://Assets/placeholder/UITheme.tres" id="5_ackx8"]
[ext_resource type="Script" path="res://Scripts/PieceSelectorButton.gd" id="6_0s2wv"]
[ext_resource type="Texture2D" uid="uid://csdki2m1w8hyv" path="res://Assets/placeholder/PieceTextures/0.png" id="7_d8q7m"]
[ext_resource type="Texture2D" uid="uid://bmk3upu405ob" path="res://Assets/placeholder/PieceTextures/1.png" id="8_f7ias"]
[ext_resource type="Texture2D" uid="uid://b5lbt03dqbe83" path="res://Assets/placeholder/PieceTextures/2.png" id="9_rpbd7"]
[ext_resource type="Texture2D" uid="uid://cwuf3ixxgsm3w" path="res://Assets/placeholder/PieceTextures/3.png" id="10_lyrsx"]
[ext_resource type="Texture2D" uid="uid://s32rdfod0lbe" path="res://Assets/placeholder/PieceTextures/4.png" id="11_vflt5"]
[ext_resource type="Texture2D" uid="uid://b2cinqvg0ryt2" path="res://Assets/placeholder/PieceTextures/5.png" id="12_4vaih"]
[ext_resource type="Texture2D" uid="uid://bfjkmtlfcohuy" path="res://Assets/placeholder/PieceTextures/6.png" id="13_0r5qx"]
[ext_resource type="Texture2D" uid="uid://dk3ax31ffv6uo" path="res://Assets/placeholder/PieceTextures/7.png" id="14_lt2p8"]
[ext_resource type="Texture2D" uid="uid://bwejq1ixpdrbp" path="res://Assets/placeholder/PieceTextures/8.png" id="15_c18nl"]
[ext_resource type="Script" path="res://Scripts/PieceManager.gd" id="16_kmfeu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ulwnf"]
bg_color = Color(0.576471, 0.717647, 0.647059, 0.376471)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.8, 0.376471)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="RootNode" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("piece_manager", "grid", "pieces_parent")]
script = ExtResource("1_5xhof")
current_mode = 1
piece_manager = NodePath("../PieceManager")
grid = NodePath("../Grid")
pieces_parent = NodePath("../PieceManager")
held_piece_pickup_duration = 0.1
held_piece_snap_animation_duration = 0.1

[node name="LevelEditor" type="Node" parent="." node_paths=PackedStringArray("game_manager", "piece_manager", "grid", "piece_starting_areas", "filename_text_edit", "save_level_output_label")]
script = ExtResource("2_i0cbh")
game_manager = NodePath("../GameManager")
piece_manager = NodePath("../PieceManager")
grid = NodePath("../Grid")
piece_starting_areas = [NodePath("../PieceStartAreaLeft"), NodePath("../PieceStartAreaRight")]
filename_text_edit = NodePath("../SaveLevelButton/FilenameTextEdit")
save_level_output_label = NodePath("../SaveLevelButton/OutputLabel")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 488.0
offset_top = 20.0
offset_right = 817.0
offset_bottom = 79.0
text = "Click+Hold to move pieces
A or D while holding piece to rotate"

[node name="Grid" type="Control" parent="."]
anchors_preset = 0
offset_left = 640.0
offset_top = 92.0
offset_right = 1280.0
offset_bottom = 732.0
mouse_filter = 2
script = ExtResource("4_ftw4p")
bottom_margin = 256.0

[node name="PieceStartAreaLeft" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -448.0
offset_right = 632.0
offset_bottom = 192.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ulwnf")

[node name="Label" type="Label" parent="PieceStartAreaLeft"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.376471)
theme_override_font_sizes/font_size = 32
text = "Piece starting area"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PieceStartAreaRight" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -632.0
offset_top = -448.0
offset_right = -8.0
offset_bottom = 192.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ulwnf")

[node name="Label" type="Label" parent="PieceStartAreaRight"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.376471)
theme_override_font_sizes/font_size = 32
text = "Piece starting area"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PieceSelector" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -521.0
offset_top = -279.0
offset_right = 521.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_ackx8")
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PieceSelector"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="PieceSelectorButton0" type="Button" parent="PieceSelector/HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
action_mode = 0
script = ExtResource("6_0s2wv")

[node name="PieceTexture" type="TextureRect" parent="PieceSelector/HBoxContainer/PieceSelectorButton0"]
texture_repeat = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
texture = ExtResource("7_d8q7m")
stretch_mode = 5

[node name="PieceSelectorButton1" type="Button" parent="PieceSelector/HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
script = ExtResource("6_0s2wv")
piece_id = 1

[node name="PieceTexture" type="TextureRect" parent="PieceSelector/HBoxContainer/PieceSelectorButton1"]
texture_repeat = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("8_f7ias")
stretch_mode = 5

[node name="PieceSelectorButton2" type="Button" parent="PieceSelector/HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
script = ExtResource("6_0s2wv")
piece_id = 2

[node name="PieceTexture" type="TextureRect" parent="PieceSelector/HBoxContainer/PieceSelectorButton2"]
texture_repeat = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("9_rpbd7")
stretch_mode = 5

[node name="PieceSelectorButton3" type="Button" parent="PieceSelector/HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
script = ExtResource("6_0s2wv")
piece_id = 3

[node name="PieceTexture" type="TextureRect" parent="PieceSelector/HBoxContainer/PieceSelectorButton3"]
texture_repeat = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("10_lyrsx")
stretch_mode = 5

[node name="PieceSelectorButton4" type="Button" parent="PieceSelector/HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
script = ExtResource("6_0s2wv")
piece_id = 4

[node name="PieceTexture" type="TextureRect" parent="PieceSelector/HBoxContainer/PieceSelectorButton4"]
texture_repeat = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -96.0
offset_right = 32.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 96)
texture = ExtResource("11_vflt5")
stretch_mode = 5

[node name="PieceSelectorButton5" type="Button" parent="PieceSelector/HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
script = ExtResource("6_0s2wv")
piece_id = 5

[node name="PieceTexture" type="TextureRect" parent="PieceSelector/HBoxContainer/PieceSelectorButton5"]
texture_repeat = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -96.0
offset_right = 64.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 96)
texture = ExtResource("12_4vaih")
stretch_mode = 5

[node name="PieceSelectorButton6" type="Button" parent="PieceSelector/HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
script = ExtResource("6_0s2wv")
piece_id = 6

[node name="PieceTexture" type="TextureRect" parent="PieceSelector/HBoxContainer/PieceSelectorButton6"]
texture_repeat = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -96.0
offset_right = 96.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(96, 96)
texture = ExtResource("13_0r5qx")
stretch_mode = 5

[node name="PieceSelectorButton7" type="Button" parent="PieceSelector/HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
script = ExtResource("6_0s2wv")
piece_id = 7

[node name="PieceTexture" type="TextureRect" parent="PieceSelector/HBoxContainer/PieceSelectorButton7"]
texture_repeat = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -96.0
offset_right = 96.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(96, 96)
texture = ExtResource("14_lt2p8")
stretch_mode = 5

[node name="PieceSelectorButton8" type="Button" parent="PieceSelector/HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
script = ExtResource("6_0s2wv")
piece_id = 8

[node name="PieceTexture" type="TextureRect" parent="PieceSelector/HBoxContainer/PieceSelectorButton8"]
texture_repeat = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -96.0
offset_right = 64.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 96)
texture = ExtResource("15_c18nl")
stretch_mode = 5

[node name="PieceManager" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("16_kmfeu")

[node name="SaveLevelButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -56.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 22
text = "Save Level"

[node name="FilenameTextEdit" type="TextEdit" parent="SaveLevelButton"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = -192.0
offset_right = -8.0
grow_vertical = 0
placeholder_text = "filename"

[node name="OutputLabel" type="Label" parent="SaveLevelButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -325.0
offset_top = -44.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Save output text"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="button_up" from="SaveLevelButton" to="LevelEditor" method="on_save_level_button"]
